<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context="com.surf_sharing.surfsharingmobileapp.LoginActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="270dp"
            android:layout_height="121dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="41dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="41dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/Password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:background="?attr/actionModeSplitBackground"
            android:elevation="0dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@+id/login_form"
            app:layout_constraintTop_toBottomOf="@+id/login_form" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="Dont have an account?"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/login_form"
            app:layout_constraintTop_toBottomOf="@+id/login_form" />

        <Button
            android:id="@+id/passangerAccButon"
            android:layout_width="271dp"
            android:layout_height="52dp"
            android:layout_marginLeft="41dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="14dp"
            android:background="?attr/actionModeSplitBackground"
            android:text="Create Passenger Account"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/driverAccButton"
            android:layout_width="271dp"
            android:layout_height="52dp"
            android:layout_marginTop="17dp"
            android:background="?attr/actionModeSplitBackground"
            android:text="Create Driver Account"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@+id/passangerAccButon"
            app:layout_constraintTop_toBottomOf="@+id/passangerAccButon" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
